--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "hardhat": "hardhat",
     "hardhat-kovan": "hardhat --network kovan",
     "hardhat-ropsten": "hardhat --network ropsten",
-    "hardhat-main": "hardhat --network main",
+    "hardhat-shiden": "hardhat --network main",
     "hardhat-docker": "hardhat --network hardhatevm_docker",
     "hardhat help": "hardhat help",
     "compile": "SKIP_LOAD=true hardhat compile",
@@ -19,30 +19,30 @@
     "types-gen": "hardhat typechain",
     "test": "npm run compile:force:quiet && TS_NODE_TRANSPILE_ONLY=1 hardhat test",
     "coverage": "SKIP_LOAD=true npx hardhat typechain && node --max_old_space_size=6144 node_modules/.bin/hardhat coverage",
-    "dev:deployment": "hardhat dev-deployment --admin ${AAVE_ADMIN:-''} --lend-token-address ${LEND_TOKEN:-''}",
-    "docker:deployment": "npm run hardhat-docker -- dev-deployment --admin ${AAVE_ADMIN:-''} --lend-token-address ${LEND_TOKEN:-''}",
-    "dev:main:deployment": "hardhat main-deployment",
-    "dev:deploy-AaveToken": "hardhat deploy-AaveToken",
-    "dev:deploy-LendToAaveMigrator": "hardhat deploy-LendToAaveMigrator",
-    "dev:initialize-AaveToken": "hardhat initialize-AaveToken --admin ${AAVE_ADMIN:-''}",
-    "dev:initialize-LendToAaveMigrator": "hardhat initialize-LendToAaveMigrator --admin ${AAVE_ADMIN:-''}",
+    "dev:deployment": "hardhat dev-deployment --admin ${LAY_ADMIN:-''} --lend-token-address ${LEND_TOKEN:-''}",
+    "docker:deployment": "npm run hardhat-docker -- dev-deployment --admin ${LAY_ADMIN:-''} --lend-token-address ${LEND_TOKEN:-''}",
+    "dev:main:deployment": "hardhat shiden-deployment",
+    "dev:deploy-LayToken": "hardhat deploy-LayToken",
+    "dev:deploy-LendToLayMigrator": "hardhat deploy-LendToLayMigrator",
+    "dev:initialize-LayToken": "hardhat initialize-LayToken --admin ${LAY_ADMIN:-''}",
+    "dev:initialize-LendToLayMigrator": "hardhat initialize-LendToLayMigrator --admin ${LAY_ADMIN:-''}",
     "kovan:deployment": "npm run hardhat-kovan -- testnet-deployment --verify",
-    "kovan:deploy-AaveToken": "npm run hardhat-kovan deploy-AaveToken",
+    "kovan:deploy-LayToken": "npm run hardhat-kovan deploy-LayToken",
     "kovan:deploy-v2": "hardhat --network kovan deploy-v2 --verify",
-    "kovan:deploy-LendToAaveMigrator": "npm run hardhat-kovan deploy-LendToAaveMigrator",
-    "kovan:initialize-AaveToken": "npm run hardhat-kovan -- initialize-AaveToken --admin ${AAVE_ADMIN:-''}",
-    "kovan:initialize-LendToAaveMigrator": "npm run hardhat-kovan -- initialize-LendToAaveMigrator --admin ${AAVE_ADMIN:-''}",
-    "ropsten:deployment": "npm run hardhat-ropsten -- testnet-deployment --verify",
-    "ropsten:deploy-AaveToken": "npm run hardhat-ropsten deploy-AaveToken",
-    "ropsten:deploy-LendToAaveMigrator": "npm run hardhat-ropsten deploy-LendToAaveMigrator",
-    "ropsten:initialize-AaveToken": "npm run hardhat-ropsten -- initialize-AaveToken --admin ${AAVE_ADMIN:-''}",
-    "ropsten:initialize-LendToAaveMigrator": "npm run hardhat-ropsten -- initialize-LendToAaveMigrator --admin ${AAVE_ADMIN:-''}",
-    "main:deployment": "npm run hardhat-main -- main-deployment --verify",
-    "main:deploy-AaveTokenV2": "npm run hardhat-main deploy-AaveTokenV2 --verify",
-    "main:deploy-AaveToken": "npm run hardhat-main deploy-AaveToken",
-    "main:deploy-LendToAaveMigrator": "npm run hardhat-main -- deploy-LendToAaveMigrator --lend-token-address ${LEND_TOKEN:-''}",
-    "main:initialize-AaveToken": "npm run hardhat-main -- initialize-AaveToken --admin ${AAVE_ADMIN:-''} --onlyProxy",
-    "main:initialize-LendToAaveMigrator": "npm run hardhat-main -- initialize-LendToAaveMigrator --admin ${AAVE_ADMIN:-''} --onlyProxy",
+    "kovan:deploy-LendToLayMigrator": "npm run hardhat-kovan deploy-LendToLayMigrator",
+    "kovan:initialize-LayToken": "npm run hardhat-kovan -- initialize-LayToken --admin ${LAY_ADMIN:-''}",
+    "kovan:initialize-LendToLayMigrator": "npm run hardhat-kovan -- initialize-LendToLayMigrator --admin ${LAY_ADMIN:-''}",
+    "shibuya:deployment": "npm run hardhat-shibuya -- testnet-deployment --verify",
+    "shibuya:deploy-LayToken": "npm run hardhat-shibuya deploy-LayToken",
+    "shibuya:deploy-LendToLayMigrator": "npm run hardhat-shibuya deploy-LendToLayMigrator",
+    "shibuya:initialize-LayToken": "npm run hardhat-shibuya -- initialize-LayToken --admin ${LAY_ADMIN:-''}",
+    "shibuya:initialize-LendToLayMigrator": "npm run hardhat-shibuya -- initialize-LendToLayMigrator --admin ${LAY_ADMIN:-''}",
+    "shiden:deployment": "npm run hardhat-shiden -- shiden-deployment --verify",
+    "shiden:deploy-LayTokenV2": "npm run hardhat-shiden deploy-LayTokenV2 --verify",
+    "shiden:deploy-LayToken": "npm run hardhat-shiden deploy-LayToken",
+    "shiden:deploy-LendToLayMigrator": "npm run hardhat-shiden -- deploy-LendToLayMigrator --lend-token-address ${LEND_TOKEN:-''}",
+    "shiden:initialize-LayToken": "npm run hardhat-shiden -- initialize-LayToken --admin ${LAY_ADMIN:-''} --onlyProxy",
+    "shiden:initialize-LendToLayMigrator": "npm run hardhat-shiden -- initialize-LendToLayMigrator --admin ${LAY_ADMIN:-''} --onlyProxy",
     "ci:clean": "rm -rf ./artifacts ./cache ./types"
   },
   "devDependencies": {
