--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "3.0.1",
+    "@openzeppelin/contracts": "^4.1.0",
     "@typechain/ethers-v5": "^4.0.0",
     "@types/chai": "4.2.11",
     "@types/lowdb": "1.0.9",
