--- a/package.json
+++ b/package.json
@@ -23,26 +23,22 @@
     "docker:deployment": "npm run hardhat-docker -- dev-deployment --admin ${LAY_ADMIN:-''} --lend-token-address ${LEND_TOKEN:-''}",
     "dev:main:deployment": "hardhat shiden-deployment",
     "dev:deploy-LayToken": "hardhat deploy-LayToken",
-    "dev:deploy-LendToLayMigrator": "hardhat deploy-LendToLayMigrator",
     "dev:initialize-LayToken": "hardhat initialize-LayToken --admin ${LAY_ADMIN:-''}",
-    "dev:initialize-LendToLayMigrator": "hardhat initialize-LendToLayMigrator --admin ${LAY_ADMIN:-''}",
+    "dev:deploy-TokenVesting": "hardhat deploy-TokenVesting --verify",
     "kovan:deployment": "npm run hardhat-kovan -- testnet-deployment --verify",
     "kovan:deploy-LayToken": "npm run hardhat-kovan deploy-LayToken",
     "kovan:deploy-v2": "hardhat --network kovan deploy-v2 --verify",
-    "kovan:deploy-LendToLayMigrator": "npm run hardhat-kovan deploy-LendToLayMigrator",
     "kovan:initialize-LayToken": "npm run hardhat-kovan -- initialize-LayToken --admin ${LAY_ADMIN:-''}",
-    "kovan:initialize-LendToLayMigrator": "npm run hardhat-kovan -- initialize-LendToLayMigrator --admin ${LAY_ADMIN:-''}",
+    "kovan:deploy-TokenVesting": "npm run hardhat-kovan -- deploy-TokenVesting --verify",
     "shibuya:deployment": "npm run hardhat-shibuya -- testnet-deployment --verify",
     "shibuya:deploy-LayToken": "npm run hardhat-shibuya deploy-LayToken",
-    "shibuya:deploy-LendToLayMigrator": "npm run hardhat-shibuya deploy-LendToLayMigrator",
     "shibuya:initialize-LayToken": "npm run hardhat-shibuya -- initialize-LayToken --admin ${LAY_ADMIN:-''}",
-    "shibuya:initialize-LendToLayMigrator": "npm run hardhat-shibuya -- initialize-LendToLayMigrator --admin ${LAY_ADMIN:-''}",
+    "shibuya:deploy-TokenVesting": "npm run hardhat-shibuya -- deploy-TokenVesting --verify",
     "shiden:deployment": "npm run hardhat-shiden -- shiden-deployment --verify",
     "shiden:deploy-LayTokenV2": "npm run hardhat-shiden deploy-LayTokenV2 --verify",
     "shiden:deploy-LayToken": "npm run hardhat-shiden deploy-LayToken",
-    "shiden:deploy-LendToLayMigrator": "npm run hardhat-shiden -- deploy-LendToLayMigrator --lend-token-address ${LEND_TOKEN:-''}",
+    "shiden:deploy-TokenVesting": "npm run hardhat-shiden -- deploy-TokenVesting --verify",
     "shiden:initialize-LayToken": "npm run hardhat-shiden -- initialize-LayToken --admin ${LAY_ADMIN:-''} --onlyProxy",
-    "shiden:initialize-LendToLayMigrator": "npm run hardhat-shiden -- initialize-LendToLayMigrator --admin ${LAY_ADMIN:-''} --onlyProxy",
     "ci:clean": "rm -rf ./artifacts ./cache ./types"
   },
   "devDependencies": {
