--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "types-gen": "hardhat typechain",
     "test": "npm run compile:force:quiet && TS_NODE_TRANSPILE_ONLY=1 hardhat test",
     "coverage": "SKIP_LOAD=true npx hardhat typechain && node --max_old_space_size=6144 node_modules/.bin/hardhat coverage",
-    "dev:deployment": "hardhat dev-deployment --admin ${LAY_ADMIN:-''} --lend-token-address ${LEND_TOKEN:-''}",
-    "docker:deployment": "npm run hardhat-docker -- dev-deployment --admin ${LAY_ADMIN:-''} --lend-token-address ${LEND_TOKEN:-''}",
+    "dev:deployment": "hardhat dev-deployment --admin ${LAY_ADMIN:-''} ",
+    "docker:deployment": "npm run hardhat-docker -- dev-deployment --admin ${LAY_ADMIN:-''}",
     "dev:main:deployment": "hardhat shiden-deployment",
     "dev:deploy-LayToken": "hardhat deploy-LayToken",
     "dev:initialize-LayToken": "hardhat initialize-LayToken --admin ${LAY_ADMIN:-''}",
