--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@starley-finance/lay-token",
+  "name": "@starlay-finance/lay-token",
   "version": "1.0.0",
-  "description": "Starley ERC20 token",
+  "description": "Starlay ERC20 token",
   "files": [
     "/contracts/**/*.sol"
   ],
@@ -77,7 +77,7 @@
     "typechain": "^3.0.0",
     "typescript": "^4.1.2"
   },
-  "author": "Starley",
+  "author": "Starlay",
   "contributors": [],
   "license": "AGPLv3",
   "dependencies": {
